--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,21 @@
-os: linux
-group: stable
-sudo: required
-dist: bionic
+# This config uses industrial_ci (https://github.com/ros-industrial/industrial_ci.git).
+# For troubleshooting, see readme (https://github.com/ros-industrial/industrial_ci/blob/master/README.rst)
+
+language: generic
 services:
   - docker
-language: generic
-python:
-  - "2.7"
+git:
+  quiet: true
+
+# configure the build environment(s)
+# https://github.com/ros-industrial/industrial_ci/blob/master/doc/index.rst#variables-you-can-configure
 env:
-  global:
-    - ROSDEP_SKIP_KEYS=raspimouse_ros_2
   matrix:
-    - ROS_DISTRO=kinetic ROS_REPO=ros UPSTREAM_WORKSPACE=debian OS_NAME=ubuntu OS_CODE_NAME=xenial
-    - ROS_DISTRO=melodic ROS_REPO=ros UPSTREAM_WORKSPACE=debian OS_NAME=ubuntu OS_CODE_NAME=bionic
-before_install:
-    - git clone https://github.com/ryuichiueda/raspimouse_ros_2
+    - ROS_DISTRO=kinetic ROS_REPO=ros UPSTREAM_WORKSPACE=file ROSINSTALL_FILENAME=.rosinstall OS_NAME=ubuntu OS_CODE_NAME=xenial
+    - ROS_DISTRO=melodic ROS_REPO=ros UPSTREAM_WORKSPACE=file ROSINSTALL_FILENAME=.rosinstall OS_NAME=ubuntu OS_CODE_NAME=bionic
+
+# clone and run industrial_ci
 install:
-    - git clone https://github.com/ros-industrial/industrial_ci.git .ci_config
+  - git clone --quiet --depth 1 https://github.com/ros-industrial/industrial_ci.git .industrial_ci -b master
 script:
-    - source .ci_config/travis.sh
+  - .industrial_ci/travis.sh
