--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,8 @@ git:
 # https://github.com/ros-industrial/industrial_ci/blob/master/doc/index.rst#variables-you-can-configure
 env:
   matrix:
-    - ROS_DISTRO=kinetic ROS_REPO=ros UPSTREAM_WORKSPACE=file ROSINSTALL_FILENAME=.rosinstall OS_NAME=ubuntu OS_CODE_NAME=xenial
-    - ROS_DISTRO=melodic ROS_REPO=ros UPSTREAM_WORKSPACE=file ROSINSTALL_FILENAME=.rosinstall OS_NAME=ubuntu OS_CODE_NAME=bionic
+    - ROS_DISTRO=kinetic ROS_REPO=ros UPSTREAM_WORKSPACE=.rosinstall OS_NAME=ubuntu OS_CODE_NAME=xenial
+    - ROS_DISTRO=melodic ROS_REPO=ros UPSTREAM_WORKSPACE=.rosinstall OS_NAME=ubuntu OS_CODE_NAME=bionic
 
 # clone and run industrial_ci
 install:
